Web and Page view
Created a style for both web and page view to help views depending on if they would rather want the document on a web page or on a piece of paper.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
    Tutorial Case
    
    U.S. Constitution Document
-   Author: 
-   Date:   
+   Author: Mackenzie Baker
+   Date:   3.29.2019
    
    Filename: bc_const.html
    -->
@@ -18,8 +18,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
    <link href="bc_reset.css" rel="stylesheet" />
-   <link href="bc_layout.css" rel="stylesheet"   />  
- 
+   <link href="bc_layout.css" rel="stylesheet" />  
+   <link rel="stylesheet" href="bc_outline.css" />
 </head>
 
 <body>
@@ -1095,5 +1095,7 @@
          <a href="#">Help</a>
       </span>
    </footer>
+   <script src="bc_outline.js"></script>
+   <script src="bc_switch.js"></script>
 </body>
 </html>
